@@ -3,6 +3,8 @@
 
 	* config.c, config.def, cobc.h, typeck.c: added dpc-in-data conf option.
 	* pplex.l, ppparse.y: added corresponding SET DPC-IN-DATA directive.
+	* scanner.l: add EQUALS as alias for EQUAL in conditions (bug #663).
+	* typeck.c: fixed segfault with parens around condition word (bug #663).
 
 2020-07-07  Edward Hart <edward.dan.hart@gmail.com>
 
